# opc_ua_exporter

./: .codecov.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  SETUP.md  generate_certificates.py  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: README.md  code-quality.yml  tests.yml  type-check.yml
certificates/: README.md  client_cert.der  client_cert.pem  client_key.pem
docs/: EXPORT_FORMATS.md  EXPORT_FORMATS.py  TESTING.md  TROUBLESHOOTING.md
export/: README.md  opcua_export_20251104_152355.csv  opcua_export_20251104_152538.csv  opcua_export_20251104_153422.csv
mypy_coverage/: any-exprs.txt  types-of-anys.txt
mypy_report/: index.html
mypy_report/html/src/opc_browser/: __init__.py.html  browser.py.html  cli.py.html  client.py.html  exporter.py.html  generate_cert.py.html  models.py.html
mypy_report/html/src/opc_browser/strategies/: __init__.py.html  base.py.html  csv_strategy.py.html  json_strategy.py.html  xml_strategy.py.html
src/opc_browser/: __init__.py  browser.py  cli.py  client.py  exporter.py  generate_cert.py  models.py
src/opc_browser/strategies/: __init__.py  base.py  csv_strategy.py  json_strategy.py  xml_strategy.py
tests/: __init__.py  conftest.py  test_browser.py  test_cli.py  test_client.py  test_exporter.py  test_generate_cert.py  test_integration.py  test_models.py  test_strategies.py
