[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opc-ua-browser"
version = "1.0.0"
description = "Advanced OPC UA Browser and Exporter CLI Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["opc-ua", "industrial", "automation", "scada", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asyncua>=1.0.0",
    "cryptography>=41.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "lxml>=4.9.0",
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.1.0",
    "types-cryptography>=3.3.0",
]

[project.scripts]
opc-browser = "opc_browser.cli:main"

[project.urls]
Homepage = "https://github.com/Mandarinetto10/opc_ua_exporter"
Repository = "https://github.com/Mandarinetto10/opc_ua_exporter"
Issues = "https://github.com/Mandarinetto10/opc_ua_exporter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["opc_browser"]

[tool.pytest.ini_options]
addopts = [
    "--cov=src/opc_browser",
    "--cov-branch",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "-v",
]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "INFO"
markers = [
    "asyncio: marks tests as async",
    "integration: integration tests that require a real OPC UA server",
    "slow: tests that take a long time to run",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
